--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Portfolio Dev</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -22,5 +22,57 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section id="intro" class="grid container grid-cols-1">
+        <img
+          src="assets/images/Avatar.png"
+          alt="Imagem de Martina Santos"
+          class="avatar"
+        />
+
+        <h2 class="subtitle">
+          Hello World! Meu nome é <span class="text-red">Martina Santos</span> e
+          sou
+        </h2>
+        <h1 class="title-lg">Desenvolvedora Fullstack</h1>
+        <p class="text-sm">
+          Transformo necessidades em aplicações reais, evolventes e funcionais.
+          Desenvolvo sistemas através da <br />
+          minha paixão pela tecnologia, contribuindo com soluções inovadoras e
+          eficazes para desafios complexos.
+        </p>
+
+        <div class="tags">
+          <figure class="tag">
+            <img src="assets/icons/GitHub.svg" alt="GitHub logo" />
+            <figcaption class="text-md">GitHub</figcaption>
+          </figure>
+          <figure class="tag">
+            <img src="assets/icons/HTML.svg" alt="HTML logo" />
+            <figcaption class="text-md">HTML</figcaption>
+          </figure>
+          <figure class="tag">
+            <img src="assets/icons/CSS.svg" alt="CSS logo" />
+            <figcaption class="text-md">CSS</figcaption>
+          </figure>
+          <figure class="tag">
+            <img src="assets/icons/JavaScript.svg" alt="JavaScript logo" />
+            <figcaption class="text-md">Javascript</figcaption>
+          </figure>
+          <figure class="tag">
+            <img src="assets/icons/React.svg" alt="React logo" />
+            <figcaption class="text-md">React</figcaption>
+          </figure>
+          <figure class="tag">
+            <img src="assets/icons/Node.js.svg" alt="Node logo" />
+
+            <figcaption class="text-md">Node.js</figcaption>
+          </figure>
+        </div>
+
+        <img src="assets/icons/CaretDoubleDown.svg" alt="" />
+      </section>
+    </main>
+  </body>
 </html>
