--- a/index.html
+++ b/index.html
@@ -24,24 +24,26 @@
   </head>
   <body>
     <main>
-      <section id="intro" class="grid container grid-cols-1">
-        <img
-          src="assets/images/Avatar.png"
-          alt="Imagem de Martina Santos"
-          class="avatar"
-        />
+      <section id="intro" class="grid container grid-cols-intro">
+        <header>
+            <img
+              src="assets/images/Avatar.png"
+              alt="Imagem de Martina Santos"
+              class="avatar"
+            />
 
-        <h2 class="subtitle">
-          Hello World! Meu nome é <span class="text-red">Martina Santos</span> e
-          sou
-        </h2>
-        <h1 class="title-lg">Desenvolvedora Fullstack</h1>
-        <p class="text-sm">
-          Transformo necessidades em aplicações reais, evolventes e funcionais.
-          Desenvolvo sistemas através da <br />
-          minha paixão pela tecnologia, contribuindo com soluções inovadoras e
-          eficazes para desafios complexos.
-        </p>
+          <h2 class="subtitle">
+            Hello World! Meu nome é <span class="text-red">Martina Santos</span> e
+            sou
+          </h2>
+          <h1 class="title-lg">Desenvolvedora Fullstack</h1>
+          <p class="text-sm">
+            Transformo necessidades em aplicações reais, evolventes e funcionais.
+            Desenvolvo sistemas através da <br />
+            minha paixão pela tecnologia, contribuindo com soluções inovadoras e
+            eficazes para desafios complexos.
+          </p>
+        </header>
 
         <div class="tags">
           <figure class="tag">
@@ -72,6 +74,117 @@
         </div>
 
         <img src="assets/icons/CaretDoubleDown.svg" alt="" />
+      </section>
+
+      <section id="projects" class="grid container grid-cols-cards">
+        <header class="grid-column-2">
+          <h2 class="text-red subtitle">Meu trabalho</h2>
+          <h1 class="title-md">Veja os projetos em destaque</h1>
+        </header>
+        <figure class="grid card grid-column-1">
+          <img
+            src="assets/images/Thumbnail_Project-01.png"
+            alt="Imagem do projeto travelgram"
+          />
+
+          <h3 class="title-sm">Travelgram</h1>
+          <p class="text-sm">
+            Rede social onde as pessoas mostram os registros de suas viagens
+            pelo mundo
+          </p>
+        </figure>
+
+        <figure class="grid card grid-column-2">
+          <img
+            src="assets/images/Thumbnail_Project-02.png"
+            alt="Imagem do projeto tech news"
+          />
+
+          <h3 class="title-sm">Tech News</h1>
+          <p class="text-sm">
+            Homepage de um portal de notícias sobre a área de tecnologia
+          </p>
+        </figure>
+
+        <figure class="grid card grid-column-3">
+          <img
+            src="assets/images/Thumbnail_Project-03.png"
+            alt="Imagem do projeto pagina de receita"
+          />
+
+          <h3 class="title-sm">Página de receita</h1>
+          <p class="text-sm">
+            Página com o passo a passo de uma receita para cupcakes
+          </p>
+        </figure>
+
+        <figure class="grid card grid-column-1">
+          <img
+            src="assets/images/Thumbnail_Project-04.png"
+            alt="Imagem do projeto zingen"
+          />
+
+          <h3 class="title-sm">Zingen</h1>
+          <p class="text-sm">
+            Landing Page completa e responsiva de um aplicativo de Karaokê
+          </p>
+        </figure>
+
+        <figure class="grid card grid-column-2">
+          <img
+            src="assets/images/Thumbnail_Project-05.png"
+            alt="Imagem do projeto refund"
+          />
+
+          <h3 class="title-sm">Refund</h1>
+          <p class="text-sm">
+            Um sistema para pedido e acompanhamento de reembolso 
+          </p>
+        </figure>
+
+        <figure class="grid card grid-column-3">
+          <img
+            src="assets/images/Thumbnail_Project-06.png"
+            alt="Imagem do projeto pagina de turismo"
+          />
+
+          <h3 class="title-sm">Página de turismo</h1>
+          <p class="text-sm">
+            Página com as principais informações para quem quer viajar para Busan
+          </p>
+        </figure>
+      </section>
+
+      <section id="services" class="grid container grid-cols-services">
+        <header class="grid-column-2">
+          <h2 class="subtitle text-red">
+            Meus serviços
+          </h2>
+          <h1 class="title-md">
+            Como posso ajudar o seu negócio
+          </h1>
+        </header>
+
+        <figure class="card grid-column-1">
+          <img src="assets/icons/Devices.svg" alt="Icone de dispositivos">
+
+          <h1 class="title-sm">Websites e Aplicativos</h1>
+          <p class="text-sm">Desenvolvimento de interfaces</p>
+        </figure>
+
+        <figure class="card grid-column-2">
+          <img src="assets/icons/HardDrives.svg" alt="Icone de discos rigidos">
+
+          <h1 class="title-sm">API e banco de dados</h1>
+          <p class="text-sm">Criação de serviços do sistema </p>
+        </figure>
+
+        <figure class="card grid-column-3">
+          <img src="assets/icons/Infinity.svg" alt="Icone de devops">
+
+          <h1 class="title-sm">DevOps</h1>
+          <p class="text-sm">Gestão e infraestrutura da aplicação</p>
+        </figure>
       </section>
     </main>
   </body>
